added local dev env

--- a/.env.example
+++ b/.env.example
@@ -23,15 +23,28 @@ BASE_URL=https://api.themoviedb.org/3
 # =============================================================================
 # MySQL Database Configuration
 # =============================================================================
-# For Docker: SQL_HOST=db (uses docker-compose service name)
-# For Local:  SQL_HOST=localhost
-# For AWS:    SQL_HOST=your-rds-endpoint.region.rds.amazonaws.com
+# Switch between local and remote by changing DB_MODE:
+#   DB_MODE=local  -> Uses LOCAL_SQL_* variables (Docker MySQL)
+#   DB_MODE=remote -> Uses REMOTE_SQL_* variables (AWS RDS)
+# =============================================================================
 
-SQL_HOST=localhost
-SQL_PORT=3306
-SQL_USER=root
-SQL_PASS=your_database_password
-SQL_DB=tmdb
+DB_MODE=local
+
+# --- Local Docker Database (for development) ---
+# Command: docker-compose up -d
+LOCAL_SQL_HOST=localhost
+LOCAL_SQL_PORT=3306
+LOCAL_SQL_USER=root
+LOCAL_SQL_PASS=password
+LOCAL_SQL_DB=tmdb
+
+# --- Remote AWS RDS (for production/staging) ---
+# Command: docker-compose up backend frontend -d
+REMOTE_SQL_HOST=your-rds-endpoint.region.rds.amazonaws.com
+REMOTE_SQL_PORT=3306
+REMOTE_SQL_USER=your_rds_username
+REMOTE_SQL_PASS=your_rds_password
+REMOTE_SQL_DB=tmdb
 
 # =============================================================================
 # Backend API Server Configuration
