fixed loading animation

--- a/.env.example
+++ b/.env.example
@@ -23,15 +23,13 @@ BASE_URL=https://api.themoviedb.org/3
 # =============================================================================
 # MySQL Database Configuration
 # =============================================================================
-# Switch between local and remote by changing DB_MODE:
-#   DB_MODE=local  -> Uses LOCAL_SQL_* variables (Docker MySQL)
-#   DB_MODE=remote -> Uses REMOTE_SQL_* variables (AWS RDS)
+# DB_MODE is set automatically by the Makefile commands:
+#   make up-local  -> Sets DB_MODE=local (Docker MySQL)
+#   make up-remote -> Sets DB_MODE=remote (AWS RDS)
 # =============================================================================
 
-DB_MODE=local
-
 # --- Local Docker Database (for development) ---
-# Command: docker-compose up -d
+# Command: make up-local
 LOCAL_SQL_HOST=localhost
 LOCAL_SQL_PORT=3306
 LOCAL_SQL_USER=root
@@ -39,7 +37,7 @@ LOCAL_SQL_PASS=password
 LOCAL_SQL_DB=tmdb
 
 # --- Remote AWS RDS (for production/staging) ---
-# Command: docker-compose up backend frontend -d
+# Command: make up-remote
 REMOTE_SQL_HOST=your-rds-endpoint.region.rds.amazonaws.com
 REMOTE_SQL_PORT=3306
 REMOTE_SQL_USER=your_rds_username
